--- a/rr-webapp/pom.xml
+++ b/rr-webapp/pom.xml
@@ -11,6 +11,12 @@
     </properties>
 
     <dependencies>
+    
+    <dependency>
+     <groupId>com.revature</groupId>
+  	<artifactId>rr-orm</artifactId>
+  	<version>0.0.1-SNAPSHOT</version>
+    </dependency>
         <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
         <dependency>
             <groupId>org.postgresql</groupId>
